# portfolio-web/src/backend/messages/messages.types.ts
@@ -1,0 +1,14 @@
+export type MessageType = {
+  name: string;
+  email: string;
+  phone?: string;
+  content: string;
+  read?: boolean;
+  dateSent?: Date;
+  dateRead?: Date;
+};
+
+export type MessageReadUpdate = {
+  read: boolean;
+  dateRead?: Date;
+};
